maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:76: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (x<0){
  ^ShortestPathMaze:79: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return x
  ^